--- a/FormValidation.html
+++ b/FormValidation.html
@@ -1,5 +1,5 @@
 # Form-validation-Project
-Validating username and password using HTML,CSS and Javascript
+Validating username and password using HTML,CSS and Javascript.
 
 <html>
     <head>
