Update SIGN IN VALIDATION.html

--- a/SIGN IN/SIGN IN VALIDATION.html
+++ b/SIGN IN/SIGN IN VALIDATION.html
@@ -78,7 +78,7 @@
     </script>
 
     <body>
-        <form onsubmit="return validate()" action="support file.html">
+        <form onsubmit="return validate()" action="#">
         <div class="SignUp">
             <h1>WELCOME</h1>
         <div class="inputs">
